--- a/CarMarketplace.Web/Views/Catalog/Details.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Details.cshtml
@@ -11,28 +11,31 @@
 
 <div class="container mt-5">
     <div class="row">
-        <!-- Photos Section (Left Side) -->
         <div class="col-md-7">
-            <div class="col-md-7 offset-md-1">
-                <div class="owl-carousel owl-theme">
-                    <div>
-                        @foreach (var imageId in Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries))
-                        {
-                            image = ViewData["CloudDomain"]! + imageId;
-
-                            <img src="@image" class="img-fluid rounded float-end" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
-                        }
-                    </div>
-                </div>
-                <div class="row">
-                    @for (int i = 0; i < Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).Length; i++)
-                    {
-                        imagePublicId = Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries)[i];
-                        image = ViewData["CloudDomain"] + imagePublicId;
-
-                        <img src="@image" class="gallery-item rounded m-1" onclick="loadCarouselItem(@i)" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
+            <div class="owl-carousel owl-theme">
+                <div class="carousel-item active">
+                    @{
+                        var publicId = Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
+                        image = ViewData["CloudDomain"] + publicId;
                     }
+
+                    <img src="@image" class="img-fluid rounded float-end" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
                 </div>
+                @foreach (var imageId in Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).Skip(1))
+                {
+                    image = ViewData["CloudDomain"] + imageId;
+                    <img src="@image" class="img-fluid rounded float-end" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
+                }
+            </div>
+            <div class="row justify-items-between ms-4 gap-3">
+                @for (int i = 0; i < Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).Length; i++)
+                {
+                    imagePublicId = Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries)[i];
+                    image = ViewData["CloudDomain"] + imagePublicId;
+                    <div class="col-2">
+                        <img src="@image" class="rounded img-nav" onclick="loadCarouselItem(@i)" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
+                    </div>
+                }
             </div>
         </div>
         <div class="col-md-5 mt-3">
@@ -110,8 +113,6 @@
 
 @section Scripts
     {
-    <script src="/node_modules/jquery/dist/jquery.js"></script>
-
     <script>
         $(document).ready(function () {
             $(".owl-carousel").owlCarousel({
