--- a/CarMarketplace.Web/wwwroot/css/site.css
+++ b/CarMarketplace.Web/wwwroot/css/site.css
@@ -38,3 +38,15 @@ body {
 .form-floating .wide-input {
     height: 80px;
 }
+
+.img-nav {
+    max-width: 120px;
+    max-height: 120px;
+    width: auto;
+    height: auto;
+}
+
+.rounded-circle {
+    width: 80px; /* Adjust the width and height as needed */
+    height: 80px; /* Make the button perfectly round */
+}
