Post a car view is done, now time for the back end

--- a/CarMarketplace.Web/Views/User/UserPosts.cshtml
+++ b/CarMarketplace.Web/Views/User/UserPosts.cshtml
@@ -24,30 +24,29 @@
             @foreach (var post in Model.Skip(i).Take(3))
             {
                 imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
+
                 <div class="col-md-4 text-decoration-none">
-                    <div>
-                        <div class="card mb-4">
-                            <img src="@imageSrc" class="card-img-top" alt="@post.Car.CarName">
-                            <div class="card-body">
-                                <h3 class="card-title"><strong>@post.Car.CarName</strong></h3>
-                                <hr>
-                                <span class="card-text fs-3">Price: <span class="card-text fs-3 fst-italic">@post.Price</span> BGN</span>
-                                <br>
-                                <span class="card-text fs-3">Year: <span class="fst-italic"></span>@post.Car.Year</span></span>
-                                <br>
-                                <p class="card-text fs-3 fst-italic">@post.Car.Province.ProvinceName</p>
-                                <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
-                                <br>
-                                <div class="row justify-content-center mt-2">
-                                    <div class="col-4">
-                                        <a class="btn btn-primary btn-warning col-lg-12">Edit</a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a class="btn btn-primary col-lg-12" asp-controller="Catalog" asp-action="Details" asp-route-id="@post.Id">View</a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a class="btn btn-primary btn-danger col-lg-12">Delete</a>
-                                    </div>
+                    <div class="card mb-4">
+                        <img src="@imageSrc" class="card-img-top" alt="@post.Car.CarName">
+                        <div class="card-body">
+                            <h3 class="card-title"><strong>@post.Car.CarName</strong></h3>
+                            <hr>
+                            <span class="card-text fs-3">Price: <span class="card-text fs-3 fst-italic">@post.Price</span> BGN</span>
+                            <br>
+                            <span class="card-text fs-3">Year: <span class="fst-italic"></span>@post.Car.Year</span>
+                            <br>
+                            <p class="card-text fs-3 fst-italic">@post.Car.Province.ProvinceName</p>
+                            <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                            <br>
+                            <div class="row justify-content-center mt-2">
+                                <div class="col-4">
+                                    <a class="btn btn-primary btn-warning col-lg-12">Edit</a>
+                                </div>
+                                <div class="col-4">
+                                    <a class="btn btn-primary col-lg-12" asp-controller="Catalog" asp-action="Details" asp-route-id="@post.Id">View</a>
+                                </div>
+                                <div class="col-4">
+                                    <a class="btn btn-primary btn-danger col-lg-12">Delete</a>
                                 </div>
                             </div>
                         </div>
