--- a/CarMarketplace.Web/Views/Catalog/AddPost.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/AddPost.cshtml
@@ -24,12 +24,12 @@
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="Model">Model</label>
-                <input type="text" class="form-control" asp-for="Model" name="model" required>
+                <input type="text" class="form-control" asp-for="Model" name="model" placeholder="e.g., Astra, Corsa, Zafira" required>
                 <span asp-validation-for="Model" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label asp-for="Year" class="form-label fs-4">Year</label>
-                <input type="number" class="form-control" asp-for="Year" value="" min="1886" max="2023" required>
+                <input type="number" class="form-control" asp-for="Year" value="" min="1886" max="2023" placeholder="e.g., 2017" required>
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
@@ -67,28 +67,61 @@
             <h3 class="mt-2">Engine specs:</h3>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineDisplacement">Displacement</label>
-                <input type="number" class="form-control" asp-for="EngineDisplacement" value="" name="displacement" min="0" max="99999" required>
+                <input type="number" class="form-control" asp-for="EngineDisplacement" value="" name="displacement" min="0" max="99999" placeholder="e.g., 1600, 2000, 2500" required>
                 <span asp-validation-for="EngineDisplacement" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineFuelType">Fuel</label>
-                <input type="text" class="form-control" asp-for="EngineFuelType" name="fuel" required>
+                <input type="text" class="form-control" asp-for="EngineFuelType" name="fuel" placeholder="e.g., Petrol, Diesel, Hybrid" required>
                 <span asp-validation-for="EngineFuelType" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineHorsePower">Horsepower</label>
-                <input type="number" class="form-control" asp-for="EngineHorsePower" value="" name="horsepower" min=0 max="9999" required>
+                <input type="number" class="form-control" asp-for="EngineHorsePower" value="" name="horsepower" min=0 max="9999" placeholder="e.g., 120, 170" required>
                 <span asp-validation-for="EngineHorsePower" class="text-danger"></span>
             </div>
         </div>
         <div class="mb-3">
-            <label for="engine" class="form-label fs-4">Description</label>
-            <textarea asp-for="Description" class="form-control"></textarea>
+            <label asp-for="Price" class="form-label fs-4">Price</label>
+            <input type="number" asp-for="Price" class="form-control" value="" name="price" placeholder="Your price will be in BGN" required>
+            <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label for="price" class="form-label">Price</label>
-            <input type="number" class="form-control" id="price" name="price" required>
+            <label asp-for="Odometer" class="form-label fs-4">Odometer/Kilometers</label>
+            <input type="number" asp-for="Odometer" class="form-control" value="" name="odometer" placeholder="e.g., 170000, 250000" required>
+            <span asp-validation-for="Odometer" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="mb-3">
+            <label asp-for="City" class="form-label fs-4">City</label>
+            <input type="text" asp-for="City" class="form-control" name="city" placeholder="e.g., Ruse, Sofia, Plovdiv">
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="TransmissionType" class="form-label fs-4">Transmission</label>
+            <input type="text" asp-for="TransmissionType" class="form-control" name="transmission" value="" placeholder="e.g., Manual, Automatic">
+            <span asp-validation-for="TransmissionType" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="EuroStandart" class="form-label fs-4">Euro</label>
+            <input type="number" asp-for="EuroStandart" class="form-control" value="" name="euroStandart" placeholder="e.g., 2, 3" required>
+            <span asp-validation-for="EuroStandart" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="VinNumber" class="form-label fs-4">VinNumber</label>
+            <input type="text" asp-for="VinNumber" class="form-control" value="" name="vin" placeholder="Car's unique identifier">
+            <span asp-validation-for="VinNumber" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="TechnicalSpecificationURL" class="form-label fs-4">Car Specifications</label>
+            <input type="text" asp-for="TechnicalSpecificationURL" class="form-control" name="specs" value="" placeholder="Link to auto data site for your car">
+        </div>
+        <div class="mb-3">
+            <label for="engine" class="form-label fs-4">Description</label>
+            <textarea asp-for="Description" class="form-control" placeholder="My recently imported car..."></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="d-grid col-3 mx-auto mt-3 mb-2">
+            <button type="submit" class="btn btn-primary fs-4">Post</button>
+        </div>
     </form>
 </div>
