--- a/CarMarketplace.Web/Views/Catalog/AddPost.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/AddPost.cshtml
@@ -6,7 +6,7 @@
     <h1>@ViewData["Title"]</h1>
 </div>
 <div class="container mt-5">
-    <form enctype="multipart/form-data">
+    <form enctype="multipart/form-data" asp-action="Post" method="post">
         <div class="form-group col-12 mb-3 text-center">
             <label class="form-label mt-4 fs-4">Choose up to 10 photos</label>
             <input class="form-control" type="file" multiple>
@@ -14,17 +14,18 @@
         <div class="row col-lg-13">
             <div class="mb-3 col-4">
                 <label asp-for="MakeId" class="form-label fs-4">Manufaturer</label>
-                <select asp-for="MakeId" class="form-select" name="make" required>
+                <select asp-for="MakeId" class="form-select" required>
                     <option value="" selected disabled>Select a make</option>
                     @foreach (var item in Model.Makes)
                     {
                         <option value="@item.Id">@item.Name</option>
                     }
                 </select>
+                <span asp-validation-for="MakeId" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="Model">Model</label>
-                <input type="text" class="form-control" asp-for="Model" name="model" placeholder="e.g., Astra, Corsa, Zafira" required>
+                <input type="text" class="form-control" asp-for="Model" placeholder="e.g., Astra, Corsa, Zafira" required>
                 <span asp-validation-for="Model" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
@@ -34,7 +35,7 @@
             </div>
             <div class="mb-3 col-4">
                 <label asp-for="CategoryId" class="form-label fs-4">Category</label>
-                <select asp-for="CategoryId" class="form-select" name="category" required>
+                <select asp-for="CategoryId" class="form-select" required>
                     <option value="" selected disabled>Select a category</option>
                     @foreach (var item in Model.Categories)
                     {
@@ -44,7 +45,7 @@
             </div>
             <div class="mb-3 col-4">
                 <label asp-for="ColorId" class="form-label fs-4">Color</label>
-                <select asp-for="ColorId" class="form-select" name="color" required>
+                <select asp-for="ColorId" class="form-select" required>
                     <option value="" selected disabled>Select a color</option>
                     @foreach (var item in Model.Colors)
                     {
@@ -54,7 +55,7 @@
             </div>
             <div class="mb-3 col-4">
                 <label asp-for="ProvinceId" class="form-label fs-4">Province</label>
-                <select asp-for="ProvinceId" class="form-select" name="province" required>
+                <select asp-for="ProvinceId" class="form-select" required>
                     <option value="" selected disabled>Select a province</option>
                     @foreach (var item in Model.Provinces)
                     {
@@ -67,53 +68,53 @@
             <h3 class="mt-2">Engine specs:</h3>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineDisplacement">Displacement</label>
-                <input type="number" class="form-control" asp-for="EngineDisplacement" value="" name="displacement" min="0" max="99999" placeholder="e.g., 1600, 2000, 2500" required>
+                <input type="number" class="form-control" asp-for="EngineDisplacement" value="" min="0" max="99999" placeholder="e.g., 1600, 2000, 2500" required>
                 <span asp-validation-for="EngineDisplacement" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineFuelType">Fuel</label>
-                <input type="text" class="form-control" asp-for="EngineFuelType" name="fuel" placeholder="e.g., Petrol, Diesel, Hybrid" required>
+                <input type="text" class="form-control" asp-for="EngineFuelType" placeholder="e.g., Petrol, Diesel, Hybrid" required>
                 <span asp-validation-for="EngineFuelType" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineHorsePower">Horsepower</label>
-                <input type="number" class="form-control" asp-for="EngineHorsePower" value="" name="horsepower" min=0 max="9999" placeholder="e.g., 120, 170" required>
+                <input type="number" class="form-control" asp-for="EngineHorsePower" value="" min=0 max="9999" placeholder="e.g., 120, 170" required>
                 <span asp-validation-for="EngineHorsePower" class="text-danger"></span>
             </div>
         </div>
         <div class="mb-3">
             <label asp-for="Price" class="form-label fs-4">Price</label>
-            <input type="number" asp-for="Price" class="form-control" value="" name="price" placeholder="Your price will be in BGN" required>
+            <input type="number" asp-for="Price" class="form-control" value="" placeholder="Your price will be in BGN" required>
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="Odometer" class="form-label fs-4">Odometer/Kilometers</label>
-            <input type="number" asp-for="Odometer" class="form-control" value="" name="odometer" placeholder="e.g., 170000, 250000" required>
+            <input type="number" asp-for="Odometer" class="form-control" value="" placeholder="e.g., 170000, 250000" required>
             <span asp-validation-for="Odometer" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="City" class="form-label fs-4">City</label>
-            <input type="text" asp-for="City" class="form-control" name="city" placeholder="e.g., Ruse, Sofia, Plovdiv">
+            <input type="text" asp-for="City" class="form-control" placeholder="e.g., Ruse, Sofia, Plovdiv">
             <span asp-validation-for="City" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="TransmissionType" class="form-label fs-4">Transmission</label>
-            <input type="text" asp-for="TransmissionType" class="form-control" name="transmission" value="" placeholder="e.g., Manual, Automatic">
+            <input type="text" asp-for="TransmissionType" class="form-control" value="" placeholder="e.g., Manual, Automatic">
             <span asp-validation-for="TransmissionType" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="EuroStandart" class="form-label fs-4">Euro</label>
-            <input type="number" asp-for="EuroStandart" class="form-control" value="" name="euroStandart" placeholder="e.g., 2, 3" required>
+            <input type="number" asp-for="EuroStandart" class="form-control" value="" placeholder="e.g., 2, 3" required>
             <span asp-validation-for="EuroStandart" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="VinNumber" class="form-label fs-4">VinNumber</label>
-            <input type="text" asp-for="VinNumber" class="form-control" value="" name="vin" placeholder="Car's unique identifier">
+            <input type="text" asp-for="VinNumber" class="form-control" value="" placeholder="Car's unique identifier">
             <span asp-validation-for="VinNumber" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="TechnicalSpecificationURL" class="form-label fs-4">Car Specifications</label>
-            <input type="text" asp-for="TechnicalSpecificationURL" class="form-control" name="specs" value="" placeholder="Link to auto data site for your car">
+            <input type="text" asp-for="TechnicalSpecificationURL" class="form-control" value="" placeholder="Link to auto data site for your car">
         </div>
         <div class="mb-3">
             <label for="engine" class="form-label fs-4">Description</label>
@@ -121,7 +122,7 @@
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="d-grid col-3 mx-auto mt-3 mb-2">
-            <button type="submit" class="btn btn-primary fs-4">Post</button>
+            <input type="submit" class="btn btn-primary fs-4" value="Post" />
         </div>
     </form>
 </div>
