--- a/CarMarketplace.Web/Views/Catalog/Edit.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AddCarViewModel
 @{
-    ViewData["Title"] = "Add a car for sale";
+    ViewData["Title"] = "Edit";
 }
 <div class="mx-auto text-center mt-2">
     <h1>@ViewData["Title"]</h1>
@@ -9,7 +9,7 @@
     <form enctype="multipart/form-data" asp-action="Post" method="post">
         <div class="form-group col-12 mb-3 text-center">
             <label class="form-label mt-4 fs-4">Choose up to 10 photos</label>
-            <input class="form-control" type="file" asp-for="Images" multiple>
+            <input class="form-control" type="file" multiple>
         </div>
         <div class="row col-lg-13">
             <div class="mb-3 col-4">
@@ -124,5 +124,4 @@
             <input type="submit" class="btn btn-primary fs-4" value="Post" />
         </div>
     </form>
-    <partial name="_ValidationScriptsPartial" />
 </div>
