--- a/CarMarketplace.Web/Views/Seller/UserPosts.cshtml
+++ b/CarMarketplace.Web/Views/Seller/UserPosts.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="col-md-6 my-4 align-items-middle">
             <div class="d-grid col-3 mx-auto float-end mt-2">
-                <a asp-controller="Catalog" asp-action="AddPost" class="btn btn-primary btn-lg">Add a post</a>
+                <a asp-controller="SalePost" asp-action="Add" class="btn btn-primary btn-lg">Add a post</a>
             </div>
         </div>
     </div>
@@ -40,13 +40,13 @@
                             <br>
                             <div class="row justify-content-center mt-2">
                                 <div class="col-4">
-                                    <a class="btn btn-primary btn-warning col-lg-12">Edit</a>
+                                    <a class="btn btn-primary btn-warning col-lg-12" asp-controller="SalePost" asp-action="Edit" asp-route-postId="@post.Id">Edit</a>
                                 </div>
                                 <div class="col-4">
-                                    <a class="btn btn-primary col-lg-12" asp-controller="Catalog" asp-action="Details" asp-route-id="@post.Id">View</a>
+                                    <a class="btn btn-primary col-lg-12" asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id">View</a>
                                 </div>
                                 <div class="col-4">
-                                    <a class="btn btn-primary btn-danger col-lg-12" asp-controller="Catalog" asp-action="Delete" asp-route-postId="@post.Id">Delete</a>
+                                    <a class="btn btn-primary btn-danger col-lg-12" asp-controller="SalePost" asp-action="Delete" asp-route-postId="@post.Id">Delete</a>
                                 </div>
                             </div>
                         </div>
@@ -56,3 +56,4 @@
         </div>
     }
 </div>
+
